tests/ui/parser/close_delimeter2.stderr
error: expected one of `;` or `}`, found `<eof>`
  --> ROOT/tests/ui/parser/close_delimeter2.sol:LL:CC
   |
LL |     uint y
   |          ^ expected one of `;` or `}`

error: aborting due to 1 previous error

